libshared: sync to haiku hrev59379

--- a/src/kits/shared/CMakeLists.txt
+++ b/src/kits/shared/CMakeLists.txt
@@ -7,14 +7,20 @@ AddOn(
 	AttributeUtilities.cpp
 	# TODO: this should be a separate lib
 	#ExpressionParser.cpp
+	#BarberPole.cpp
 	BitmapButton.cpp
 	CalendarView.cpp
+	ColorItem.cpp
+	ColorListView.cpp
+	ColorPreview.cpp
 	ColorQuantizer.cpp
 	CommandPipe.cpp
+	DateTimeEdit.cpp
 	DragTrackingFilter.cpp
 	DriverSettingsMessageAdapter.cpp
 	#Geolocation.cpp
 	HashString.cpp
+	HSL.cpp
 	#IconButton.cpp
 	#IconView.cpp
 	JsonWriter.cpp
@@ -25,6 +31,7 @@ AddOn(
 	Json.cpp
 	Keymap.cpp
 	LongAndDragTrackingFilter.cpp
+	MemoryRingIO.cpp
 	MessageBuilder.cpp
 	NaturalCompare.cpp
 	PromptWindow.cpp
@@ -33,6 +40,8 @@ AddOn(
 	RWLocker.cpp
 	RWLockManager.cpp
 	SettingsHandler.cpp
+	SettingsMessage.cpp
+	StatusView.cpp
 	ShakeTrackingFilter.cpp
 	StringForRate.cpp
 	StringForSize.cpp
@@ -41,6 +50,8 @@ AddOn(
 	Thread.cpp
 	ToolBar.cpp
 	Variant.cpp
+	WeakReferenceable.cpp
+	md5.cpp
 )
 
 UsePrivateHeaders(shared shared locale interface kernel libroot system)
